# vsu.plt

./: CMakeLists.txt  LICENSE  README.md
assets/: amm2.wf
doc/: 3d.tex  Makefile  coordinates.asy
include/vsu/: camera2.h  plt.h
include/vsu/plt/: bmp.h  model3.h  plot2.h  plotgraph.h  plt.h  scene3.h  wireframe.h
include/vsu/plt/backend/: fb.h
include/vsu/plt/util/: alg.h  terminal-input.h
src/: bmp.c  bresenham-line.c  camera2-fb.c  camera2-gtk.c  fb.c  fill-poly.c  model3.c  plot2.c  plotgraph.c  plt-affine.c  plt.c  show-plotgraph-cardioid.c  show-wireframe.c  showcubspline.c  showplot.c  terminal-input.c  wireframe.c
tests/: camera2-fb.c  camera2-gtk.c  fb-flush.c  fb-interactive.c  fill-poly.c  showplot.c  test_vsuplt_lines_interactive.c  test_vsuplt_pub_api.c  wireframe.c
